Fixing horizontal scroll

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+ 
  h1, h2, h3, h4, h5, h6 {
      font-family: 'Raleway';
  }
@@ -7,7 +12,7 @@
 
 header.background {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     text-align: center;
     background-image: url(./img/galaxy-background2.jpg);
     background-repeat: no-repeat;
